@@ -274,10 +274,16 @@ void drawCollisions(void *ptr, void *data)
 	[window setUserInteractionEnabled:YES];	
 	[window setMultipleTouchEnabled:NO];
 	
+	// must be called before any othe call to the director
+	// FastDirector is faster, but consumes more battery
+	[Director useFastDirector];
+	
 	// before creating any layer, set the landscape mode
 //	[[Director sharedDirector] setLandscape: YES];
 	[[Director sharedDirector] setDisplayFPS:YES];
-	[[Director sharedDirector] setAnimationInterval:1.0/60];
+
+	// Fast Director doesn't support setAnimationInterval yet
+//	[[Director sharedDirector] setAnimationInterval:1.0/60];
 	
 	[[Director sharedDirector] attachInView:window];
 	
